[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.23.0", features = ["tokio-rustls-webpki-roots"] }
iced = { version = "0.10.0", features = ["tokio"] }
tokio = { version = "1.32.0", features = ["full"] }

anyhow = "1.0.75"
thiserror = "1.0.49"
