[package]
name = "terminal-client"
version = "0.0.0"
edition = "2021"

[dependencies]
ratatui = "0.26.2"
crossterm = "0.27.0"
tokio = { version="1.37.0", features=["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
bincode = "1.3.3"
anyhow = "1.0.82"
server = { path = "../server" }
